fix: [MGP-1099] Fix page jumping after modal is opened

--- a/src/MageSuite_WidgetNotificationModal/web/css/source/module.scss
+++ b/src/MageSuite_WidgetNotificationModal/web/css/source/module.scss
@@ -151,10 +151,3 @@ $notification-modal_coupon-code-image-size-desktop: 1.7rem !default;
         text-align: center;
     }
 }
-
-body._has-modal.modal-no-scroll {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    overflow: initial;
-}
